fix: es初始化异常